# web_hw_07

./: Dockerfile.yml  alembic.ini  db_conn_set.ini  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 389b80535607_init.py
